# Presage-for-Android

./: .gitignore  README.md
PresageSample/: settings.gradle
PresageSample/app/: build.gradle
PresageSample/app/src/androidTest/java/com/avazapp/presagesample/: ExampleInstrumentedTest.java
PresageSample/app/src/main/: AndroidManifest.xml
PresageSample/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  presage-lib.cpp
PresageSample/app/src/main/cpp/presage/: presageCallback.h
PresageSample/app/src/main/cpp/presage/core/: charsets.h
PresageSample/app/src/main/cpp/presage/core/context_tracker/: contextTracker.cpp
PresageSample/app/src/main/cpp/presage/predictors/: abbreviationExpansionPredictor.cpp  dejavuPredictor.cpp  dictionaryPredictor.cpp  smoothedNgramPredictor.cpp
PresageSample/app/src/main/cpp/presage/predictors/dbconnector/: sqliteDatabaseConnector.cpp  sqliteDatabaseConnector.h
PresageSample/app/src/main/java/com/avazapp/presagesample/: MainActivity.java
PresageSample/app/src/main/res/layout/: activity_main.xml
PresageSample/app/src/main/res/values/: strings.xml
PresageSample/app/src/test/java/com/avazapp/presagesample/: ExampleUnitTest.java
PresageSample/gradle/wrapper/: gradle-wrapper.properties
presageEngine/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
presageEngine/autom4te.cache/: output.0  output.1  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
presageEngine/lib/: Makefile.in
presageEngine/lib/core/: Makefile.in  predictorActivator.cpp  predictorActivator.h  predictorRegistry.cpp  presageException.cpp  profile.h  selector.cpp
presageEngine/lib/core/context_tracker/: Makefile.in
presageEngine/lib/core/tokenizer/: Makefile.in
presageEngine/lib/predictors/: ARPAPredictor.cpp  Makefile.am  Makefile.in  predictorRegistry.cpp  recencyPredictor.cpp  smoothedNgramPredictor.h
presageEngine/lib/predictors/dbconnector/: Makefile.am  Makefile.in  databaseConnector.cpp  sqliteDatabaseConnector.h
presageEngine/lib/tinyxml/: Makefile.in
presageEngine/tools/: Makefile  Makefile.in  presageDemo.cpp  presageDemoText.cpp  presageSimulator.cpp
presageEngine/tools/.deps/: ngram.Plo  presageDemo.Po  presageDemoText.Po  presageSimulator.Po
presageEngine/tools/simulator/: Makefile  Makefile.in  simulator.h
presageEngine/tools/simulator/.deps/: simulator.Plo
